Fixed chapter alignment

--- a/src/sass/3-objects/_modal.scss
+++ b/src/sass/3-objects/_modal.scss
@@ -9,7 +9,7 @@
     left: 0;
     top: 0;
     width: 100vw;
-    z-index: 3;
+    z-index: 10;
 
     &__content {
         background-color: $primary-color;
